--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+	<header>Are you looking for the <a href="http://old.asturix.com">old website</a>? | ¿Estás buscando <a href="http://old.asturix.com">la antigua web</a>?</header>
+
 	<div id="header">
 		<img src="new/img/logo.png">
 	</div>
@@ -47,10 +49,10 @@
 		<div class="wrapper">
 			<h1>The people</h1>
 			<ul>
-				<li>Luis Iván</li>
-				<li>Samuel</li>
-				<li>Luis Miguel</li>
-				<li>Ricardo</li>
+				<li><a href="http://luisivan.net">Luis Iván</a></li>
+				<li><a href="http://luisivan.net">Samuel</a></li>
+				<li><a href="http://cuende.net">Luis Miguel</a></li>
+				<li><a href="http://luisivan.net">Ricardo</a></li>
 			</ul>
 		</div>
 	</div>
