--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 			<h1>The people</h1>
 			<ul>
 				<li><a href="http://luisivan.net">Luis Iván</a></li>
-				<li><a href="http://luisivan.net">Samuel</a></li>
+				<li><a href="http://slandete.tumblr.com">Samuel</a></li>
 				<li><a href="http://cuende.net">Luis Miguel</a></li>
-				<li><a href="http://luisivan.net">Ricardo</a></li>
+				<li><a href="http://richiguada.tumblr.com">Ricardo</a></li>
 			</ul>
 		</div>
 	</div>
